<resources>
    <string name="app_name">Signify</string>
    <string name="greeting_with_name">Hi, %s</string>
    <string name="greeting_emoji">👋</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Signify</string>
    <string name="error_email">Wrong email format!</string>
    <string name="error_password">Password length is less than 8</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="go_to_signup">Wanna sign up first?</string>
    <string name="name_title">First Name</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="login_greetings_text">Welcome Back!</string>
    <string name="login_greetings_desc_text">Hello there! welcome to Signify. To enter the app please log in first.</string>
    <string name="placeholder_email">your@email.com</string>
    <string name="placeholder_password">password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="greetings_text">Convert your daily-basis conversation to sign language</string>
    <string name="greetings_desc_text">Be par on par on conversation with your friends that are hearing impaired now. Learn the language using machine learning inside.</string>
    <string name="get_started_button_text">Get Started!</string>
    <string name="register_greetings_text">Create an account</string>
    <string name="register_greetings_desc_text">It seems you don’t have an account to log in, huh? let’s go fill these form first</string>
    <string name="placeholder_name">your name</string>
    <string name="placeholder_confirm_password">confirm password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="backspace">Backspace</string>
    <string name="add_space">Add Space</string>
    <string name="tv_gallery_placeholder">Click + to add an image or video to begin running the...</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="fields_empty">Some fields are empty!</string>
    <string name="email_or_password_empty">Email or password empty!</string>
    <string name="history_author_date">You - %s</string>
    <string name="update_profile">Update Profile</string>
    <string name="server_side">(server-side) %1$s</string>
    <string name="last_name_title">Last Name</string>
    <string name="greeting_toast">Welcome, %1$s!</string>
    <string name="home_introduction_text">Introduction</string>
    <string name="home_convert_letter_text">Convert Letter to Sign Language</string>
    <string name="home_article_text">Articles</string>
    <string name="article_detail_title_text">Article Detail</string>
    <string name="convert_disclaimer_text">DISCLAIMER: This is only for showing a converted letter to our supported analyzing sign language dataset.</string>
    <string name="convert_letter_hint_text">Convert Letter</string>
    <string name="convert_text_button">Convert</string>
    <string name="analyze_title_text">Analyze</string>
    <string name="analyze_category_text">Category</string>
    <string name="analyze_prediction_score_text">Prediction Score</string>
    <string name="analyze_result_hint">Result</string>
    <string name="analyze_save_output_button">Save Output</string>
    <string name="output_title_text">Output</string>
    <string name="output_here_s_the_results_text">Here\'s the results!</string>
    <string name="output_disclaimer_text">For your informations, the results may not give most accurate translation of the hand sign</string>
    <string name="save_button">Save</string>
    <string name="history_empty_text">Saved history is empty</string>
    <string name="history_title_text">History</string>
    <string name="detail_history_title_text">Detail History</string>
    <string name="delete_history_button">Delete History</string>
    <string name="my_profile_title_text">My Profile</string>
    <string name="terms_and_conditions_text">Terms and Conditions</string>
    <string name="about_app_text">About App</string>
    <string name="change_language_text">Change Language</string>
    <string name="logout_text">Logout</string>
    <string name="edit_profile_title_text">Edit Profile</string>
    <string name="email_uneditable_text">Email (uneditable)</string>
    <string name="terms_and_condition_title_text">Terms and Condition</string>
    <string name="terms_one">Welcome to Signify! to use our app to it\'s full potential, we want you to read and understand our terms and conditions first below:</string>
    <string name="terms_purpose_title">1. Purpose of Application Usage</string>
    <string name="terms_purpose_text">Signify is designed to help users detect and identify sign languages based on images taken using the phone\'s camera.</string>
    <string name="terms_service_title">2. Service Availability</string>
    <string name="terms_service_text">This app is available for use worldwide, however it cannot guarantee that the application will run without technical interruptions.</string>
    <string name="terms_privacy_title">3. User Privacy</string>
    <string name="terms_privacy_text">We respect user privacy. Data collected by the application will be used in accordance with our Privacy Policy.</string>
    <string name="about_app_title_text">About App</string>
    <string name="logout_description">Are you sure to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_supported">Not Supported</string>
    <string name="switch_cnn">Switch CNN</string>
    <string name="analyze_cnn_experimental">Analyze (Experimental)</string>
    <string name="warning">Warning</string>
    <string name="cnn_disclaimer">This CNN model is still experimental and less accurate than the one we created in the previous screen. Would you like to continue?</string>
</resources>