<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.auth.login.LoginFragment">

    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_black"
        android:text="@string/app_title"
        android:textFontWeight="600"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/having_fun"
        android:transitionName="image_illustration_shared"
        app:layout_constraintBottom_toTopOf="@id/content_layout"
        app:layout_constraintEnd_toEndOf="@id/content_layout"
        app:layout_constraintStart_toStartOf="@id/content_layout" />

    <View
        android:id="@+id/circle_left"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginStart="-34dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/ellips"
        android:backgroundTint="@color/blackOne"
        android:transitionName="circle_left_shared"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/content_layout" />

    <View
        android:id="@+id/circle_right"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="-30dp"
        android:background="@drawable/ellips_reversed"
        android:backgroundTint="@color/blackOne"
        android:transitionName="circle_right_shared"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/content_layout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_rounded_border"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        android:transitionName="content_layout_shared"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/content_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0"
            android:fontFamily="@font/inter_bold"
            android:text="@string/login_greetings_text"
            android:textAlignment="center"
            android:textColor="@color/blackOne"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:alpha="1" />

        <TextView
            android:id="@+id/content_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:fontFamily="@font/inter_regular"
            android:paddingHorizontal="20dp"
            android:text="@string/login_greetings_desc_text"
            android:textAlignment="center"
            android:textColor="@color/blackTwo"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_one"
            tools:alpha="1" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:fontFamily="@font/inter_regular"
            android:text="@string/email_title"
            android:textColor="@color/blackTwo"
            app:layout_constraintStart_toStartOf="@id/ed_email"
            app:layout_constraintTop_toBottomOf="@id/content_two"
            tools:alpha="1"
            tools:layout_editor_absoluteY="381dp" />

        <com.signify.app.presentation.component.EmailTextField
            android:id="@+id/ed_email"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:alpha="0"
            android:background="@drawable/bg_custom_input"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/placeholder_email"
            android:includeFontPadding="false"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_email"
            tools:alpha="1" />

        <TextView
            android:id="@+id/label_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0"
            android:fontFamily="@font/inter_regular"
            android:text="@string/password_title"
            android:textColor="@color/blackTwo"
            app:layout_constraintStart_toStartOf="@id/ed_password_wrapper"
            app:layout_constraintTop_toBottomOf="@id/ed_email"
            tools:alpha="1"
            tools:layout_editor_absoluteY="381dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_password_wrapper"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:alpha="0"
            android:hint="@string/placeholder_password"
            android:padding="0dp"
            app:boxBackgroundColor="@color/inputColor"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_password"
            tools:alpha="1">

            <com.signify.app.presentation.component.PasswordTextField
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:includeFontPadding="false"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textSize="12sp"
                tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:backgroundTint="@color/blueOne"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sign_in_button_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_password_wrapper"
            tools:alpha="1" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            android:backgroundTint="@color/transparent"
            android:text="@string/go_to_signup"
            android:textColor="@color/blueThree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            tools:alpha="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>